there has been mistakes on the creation of papers, but now this should be correct. create folder structures of 2019 ~ 2024.

--- a/tex/2020/3.tex
+++ b/tex/2020/3.tex
@@ -10,3 +10,4 @@
 \input{\currfiledir\currfilebase/9}
 \input{\currfiledir\currfilebase/10}
 \input{\currfiledir\currfilebase/11}
+\input{\currfiledir\currfilebase/12}
