--- a/tex/2021/3.tex
+++ b/tex/2021/3.tex
@@ -10,3 +10,4 @@
 \input{\currfiledir\currfilebase/9}
 \input{\currfiledir\currfilebase/10}
 \input{\currfiledir\currfilebase/11}
+\input{\currfiledir\currfilebase/12}
