finish step 3 2019 stats.

--- a/main.tex
+++ b/main.tex
@@ -29,7 +29,7 @@
 \include{\TexPath/2016}
 \include{\TexPath/2017}
 \include{\TexPath/2018}
-% \include{\TexPath/2019}
+\include{\TexPath/2019}
 % \include{\TexPath/2020}
 % \include{\TexPath/2021}
 % \include{\TexPath/2022}
