--- a/sty/eason.sty
+++ b/sty/eason.sty
@@ -38,7 +38,7 @@
 \renewcommand{\epsilon}{\varepsilon}
 \renewcommand{\phi}{\varphi}
 
-% Number Sets
+% Sets
 \newcommand{\NN}{\mathbb{N}}
 \newcommand{\ZZ}{\mathbb{Z}}
 \newcommand{\QQ}{\mathbb{Q}}
@@ -46,6 +46,8 @@
 \newcommand{\CC}{\mathbb{C}}
 
 \newcommand{\PP}{\mathbb{P}}
+
+\renewcommand{\emptyset}{\varnothing}
 
 % Probabililty
 \DeclareMathOperator{\Cov}{Cov}
